tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/integer/us-after-bin.stderr
TOML parse error at line 1, column 18
  |
1 | us-after-bin = 0b_1
  |                  ^
invalid binary integer
